--- a/Parent_Word/Lngl_Mdls_Word.Rmd
+++ b/Parent_Word/Lngl_Mdls_Word.Rmd
@@ -38,36 +38,11 @@ graphics: yes
 ---
 
 ```{r setup, include=FALSE}
-library(TTU) #
-library(magrittr)
+library(specific)
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(comment = NA)
 knitr::opts_knit$set(root.dir = params$root_dir_1L_chr)
-options(tinytex.verbose = TRUE)
-options(xtable.floating = FALSE)
-options(xtable.timestamp = "")
 ```
 
-```{r include=FALSE}
-params_ls <- params
-```
-
-```{r echo=FALSE}
-predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = params_ls$outp_smry_ls$predr_cmprsn_tb$predr_chr, 
-                       covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
-                       existing_predrs_ls = params_ls$existing_predrs_ls)
-knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_path_to_data_dir_1L_chr,
-                  mdl_types_chr = params_ls$outp_smry_ls$prefd_mdl_types_chr,
-                  predr_vars_nms_ls = predr_vars_nms_ls,
-                  mdl_types_lup = params_ls$outp_smry_ls$mdl_types_lup, 
-                  plt_types_lup = TTU::plt_types_lup,
-                  output_type_1L_chr = params_ls$output_type_1L_chr,
-                  section_type_1L_chr = params_ls$section_type_1L_chr) 
-```
-
-This algorithm authored report summarises a number of time series models for predicting  `r ready4::get_from_lup_obj(params_ls$outp_smry_ls$dictionary_tb,                      match_value_xx = params_ls$outp_smry_ls$depnt_var_nm_1L_chr,                                                                  match_var_nm_1L_chr = "var_nm_chr",                                                                  target_var_nm_1L_chr = "var_desc_chr",                                                                  evaluate_1L_lgl = F)` at two time-points. The descriptions of each model included in the report detail model predictor variables, parameter values and predictive performance. Report figures graphically illustrate the predictive performance of models when mean or sampled parameter values are used, with and without transformation of model outputs to enforce within range predictions. A number of these plots compare the performance of predictions when the original R model object (of class *brmsfit*) is used or when predictions are made from a summary table of model coefficients. Each model description also includes a catalogue reference number that is useful for retrieving the model data required to make predictions.
-
-```{r, echo=FALSE, results='asis'}
- knit_pars_ls %>%
-  purrr::walk(~knit_mdl_rprt(.x, path_to_mdl_rprt_tmpl_1L_chr = "_mdl_rpt_tmpl.Rmd"))
+```{r, child=c('../Child_RMDs/_make_ctlg.Rmd')}
 ```
