updated version number

--- a/Child_RMDs/_mdl_rpt_tmpl.Rmd
+++ b/Child_RMDs/_mdl_rpt_tmpl.Rmd
@@ -45,7 +45,7 @@ df %>%
 \elandscape
 \newpage
 
-```{r, fig.cap={{plt_nms_chr}}, echo=FALSE, message=F}
+```{r, fig.cap={{plt_nms_chr}}, echo=FALSE, message=F, out.width = "400px"}
 knitr::include_graphics({{paths_to_mdl_plts_chr}})
 ```
 
