--- a/Child_RMDs/_make_ctlg.Rmd
+++ b/Child_RMDs/_make_ctlg.Rmd
@@ -14,8 +14,9 @@ params_ls$outp_smry_ls <- X@b_SpecificResults@a_SpecificShareable@shareable_outp
 ```
 ```{r echo=FALSE}
 predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = params_ls$outp_smry_ls$predr_cmprsn_tb$predr_chr, 
-                       covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
-                       existing_predrs_ls = params_ls$existing_predrs_ls)
+                                            covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
+                                            existing_predrs_ls = params_ls$existing_predrs_ls,
+                                            combinations_1L_lgl = params_ls$outp_smry_ls$combinations_1L_lgl, max_nbr_of_covars_1L_int = params_ls$outp_smry_ls$max_nbr_of_covars_1L_int)
 knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_path_to_data_dir_1L_chr,
                   mdl_types_chr = params_ls$outp_smry_ls$prefd_mdl_types_chr,
                   predr_vars_nms_ls = predr_vars_nms_ls,
